--- a/myservletapp/src/main/webapp/WEB-INF/web.xml
+++ b/myservletapp/src/main/webapp/WEB-INF/web.xml
@@ -3,15 +3,63 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
-  
-  <servlet>
-  	<servlet-name>MyFirstServlet</servlet-name>
-  	<servlet-class>com.covalense.webapp.myservletapp.MyFirstServlet</servlet-class>
-  </servlet>
-  
-  <servlet-mapping>
-  	<servlet-name>MyFirstServlet</servlet-name>
-  	<url-pattern>/currentDate</url-pattern>
-  </servlet-mapping>
+	<display-name>Archetype Created Web Application</display-name>
+	<context-param>
+	<param-name>movie</param-name>
+	<param-value>sholay</param-value>
+	</context-param>
+
+	<servlet>
+		<servlet-name>MyFirstServlet</servlet-name>
+		<servlet-class>com.covalense.webapp.myservletapp.MyFirstServlet</servlet-class>
+	
+	<init-param>
+		<param-name>actor</param-name>
+		<param-value>Gabber Singh</param-value>
+	</init-param>
+</servlet>
+	<servlet>
+		<servlet-name>RedirectServlet</servlet-name>
+		<display-name>RedirectServlet</display-name>
+		<description></description>
+		<servlet-class>com.covalense.webapp.myservletapp.RedirectServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>MyRedirectServlet</servlet-name>
+		<display-name>MyRedirectServlet</display-name>
+		<description></description>
+		<servlet-class>com.covalense.webapp.myservletapp.MyRedirectServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>ForwardServlet</servlet-name>
+		<display-name>ForwardServlet</display-name>
+		<description></description>
+		<servlet-class>com.covalense.webapp.myservletapp.ForwardServlet</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>IncludeServlet</servlet-name>
+		<display-name>IncludeServlet</display-name>
+		<description></description>
+		<servlet-class>com.covalense.webapp.myservletapp.IncludeServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>MyFirstServlet</servlet-name>
+		<url-pattern>/currentDate</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>RedirectServlet</servlet-name>
+		<url-pattern>/RedirectServlet</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>MyRedirectServlet</servlet-name>
+		<url-pattern>/MyRedirectServlet</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>ForwardServlet</servlet-name>
+		<url-pattern>/ForwardServlet</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>IncludeServlet</servlet-name>
+		<url-pattern>/IncludeServlet</url-pattern>
+	</servlet-mapping>
 </web-app>
